fixed overflow issue on the frontpage

--- a/src/css/start.module.css
+++ b/src/css/start.module.css
@@ -191,10 +191,10 @@ a.searchedUser img {
 
     border-radius: 5px;
     width: 26px;
-    margin-top: calc(.4rem - 13px)
 }
 
 a.searchedUser>span {
+    margin-top: calc(.4rem - 13px);
     position: absolute;
 }
 
